--- a/index.html
+++ b/index.html
@@ -4,17 +4,6 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Secure Login</title>
-        <!-- Design tokens must load first -->
-        <link rel="stylesheet" href="src/styles/tokens.css" />
-        <!-- Base styles -->
-        <link rel="stylesheet" href="src/styles/base.css" />
-        <!-- Component styles (order independent due to @layer) -->
-        <link rel="stylesheet" href="src/styles/components/input.css" />
-        <link rel="stylesheet" href="src/styles/components/form.css" />
-        <link rel="stylesheet" href="src/styles/components/button.css" />
-        <link rel="stylesheet" href="src/styles/components/card.css" />
-        <!-- Utilities last for highest specificity -->
-        <link rel="stylesheet" href="src/styles/utilities.css" />
     </head>
     <body>
         <div class="container">
@@ -124,6 +113,6 @@
             </main>
         </div>
 
-        <script type="module" src="src/pages/login/login.js"></script>
+        <script type="module" src="/src/main.js"></script>
     </body>
 </html>
